src/test/resources/purescript_examples/passing/FieldConsPuns.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('log')
        PsiElement(,)(',')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('logShow')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PsiElement(identifier)('greet')
      PsiElement(whitespace)(' ')
      PsiErrorElement:Expecting Binder, Guard or =
        PsiElement({)('{')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('greeting')
        PsiElement(,)(',')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('name')
        PsiElement(whitespace)(' ')
        PsiElement(})('}')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('log')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('$')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('greeting')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('<>')
        PsiElement(whitespace)(' ')
        PsiElement(string)('", "')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('<>')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('name')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('<>')
        PsiElement(whitespace)(' ')
        PsiElement(string)('"."')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSASTWrapperElement(DoNotationValue)
              PSASTWrapperElement(Value)
                PSASTWrapperElement(PrefixValue)
                  PSASTWrapperElement(Var)
                    PSASTWrapperElement(Qualified)
                      PsiElement(identifier)('greet')
                      PsiElement(whitespace)(' ')
  PsiErrorElement:Unexpected {. Expecting Module
    PsiElement({)('{')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('greeting')
    PsiElement(,)(',')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('name')
    PsiElement(whitespace)(' ')
    PsiElement(})('}')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n  ')
    PsiElement(where)('where')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('greeting')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Hello"')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('name')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"World"')
    PsiElement(whitespace)('\n')
